# 2x2MCP-PythiaGen

./: .gitignore  CMakeLists.txt  README.md  allInOne_multimeson.cc  beam.config  masses.txt  mcp_emitters.h  momentum.config  plot_acceptance_vs_mass_multimeson.C  plot_normalized_mcp_yield.C  run_all_masses_multimeson.sh
.ipynb_checkpoints/: allInOne_multimeson-checkpoint.cc  plot_acceptance_vs_mass_multimeson-checkpoint.C
configs/: charmonium.config
scripts/: aggregate_outputs.py  export_toymc_spectra.py  first_real_batch_notes.txt  make_job_list.py  masses_meson_first_real_batch.txt  merge_mcp_outputs.sh  plot_spectra.py  run_first_real_batch_interactive.sh  run_one_job.sh  submit_nersc_array.slurm
